fix(theme): Fixed overviewgroup item text wrapping (#3085)

--- a/packages/core/src/theme/components/OverviewGroup/index.scss
+++ b/packages/core/src/theme/components/OverviewGroup/index.scss
@@ -118,6 +118,7 @@
           font-size: 14px;
           color: var(--rp-c-text-2);
           text-decoration: none;
+          word-break: normal;
           transition:
             color 0.2s ease,
             background-color 0.2s ease;
